# Study

./: README.md  app-config.gradle  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: readTags.json  remoteConfig.json  tags.json  writeTags.json  xposed_init
app/src/main/res/color/: color_connect.xml  tab_icon_color.xml  tab_text_color.xml
app/src/main/res/drawable/: app_progress_drawable.xml  green_button_bg.xml  health_data_box_blue.xml  health_data_box_green.xml  health_data_box_red.xml  ic_back.xml  ic_circle.xml  ic_editor.xml  ic_free_style.xml  ic_free_style_select.xml  ic_guide_point_select.xml  ic_guide_point_unselect.xml  ic_home.xml  ic_home_select.xml  ic_item_select.xml  ic_level_1.xml  ic_level_2.xml  ic_level_3.xml  ic_level_4.xml  ic_level_5.xml  ic_play_right_green.xml  ic_setting.xml  ic_setting_select.xml  ic_signal_level.xml  icon_sz.xml  shape_background_gradient.xml  shape_connect_state_bg.xml  (+14 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
library-admob/: build.gradle
library-admob/src/main/: AndroidManifest.xml
library-base/: build.gradle
library-base/src/main/: AndroidManifest.xml
library-guide/: build.gradle
library-health/: build.gradle
library-health/src/main/: AndroidManifest.xml
library-health/src/main/cpp/: CMakeLists.txt  memory_stress.cpp
library-net/: build.gradle
library-net/src/main/: AndroidManifest.xml
third-lib/: build.gradle
update/: update.json
(+412 files in other folders)
